evershop-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evershop-app
  labels:
    app: evershop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evershop-app
  template:
    metadata:
      labels:
        app: evershop-app
    spec:
      containers:
      - name: evershop-app-container
        image: evershop/evershop:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: evershop-app
spec:
  type: NodePort  # Change the type to NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31001  # Define the specific node port you want to use, or let Kubernetes allocate one automatically
  selector:
    app: evershop-app
