evershop-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evershop-db-deploy
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: evershop-db
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: evershop-db-service
spec:
  type: NodePort
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31000
