evershop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evershop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evershop
  template:
    metadata:
      labels:
        app: evershop
    spec:
      containers:
        - name: evershop
          image: evershop/evershop:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: evershop-service
spec:
  selector:
    app: evershop
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
