ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evershop-ingress
spec:
  rules:
  - host: evershop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evershop-app
            port:
              number: 31001
